--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,11 +1,37 @@
-/* 
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+.myContainer {
+    text-align: center;
+ 
+}
+.trafficLight {
+    text-align: center;
+    background-color: black;
+    border-radius: 10px;
+    width: 200px;
+    height: 580px;
+    line-height: 100px;
+}
+.redLight {
+    background-color: red;
+    border-radius: 50%;
+    height: 170px;
+    width: 170px;
+    margin: 17px;
+}
+.yellowLight {
+    background-color: yellow;
+    border-radius: 50%;
+    height: 170px;
+    width: 170px;
+    margin: 17px;
+}
+.greenLight {
+    background-color: green;
+    border-radius: 50%;
+    height: 170px;
+    width: 170px;
+    margin: 17px;
+}
+.redLight, .yellowLight, .greenLight {
+    transition: all 0.3s ease-in-out;
+  }
